測試配置檔案位置更改

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=1234
 
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-mm-dd hh:mm:ss
+
+spring.config.location=D:/Homework/springboot-mall/src/main/java/com/yuyang/config/
