--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/mall?serverTimezone=Asia/Taipei&characterEncoding=utf-8
-spring.datasource.username=root
-spring.datasource.password=1234
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/mall?serverTimezone=Asia/Taipei&characterEncoding=utf-8
+#spring.datasource.username=root
+#spring.datasource.password=1234
+#
+#spring.jackson.time-zone=GMT+8
+#spring.jackson.date-format=yyyy-mm-dd hh:mm:ss
 
-spring.jackson.time-zone=GMT+8
-spring.jackson.date-format=yyyy-mm-dd hh:mm:ss
-
-spring.config.location=D:/Homework/springboot-mall/src/main/java/com/yuyang/config/
+#spring.config.location=D:/Homework/springboot-mall/src/main/java/com/yuyang/config/
